Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1973

Query a partitioned table cause Impala crash when data file doesn't have newline at the end.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 2.2
    • Impala 2.3.0
    • None
    • None

    Description

      IMPALA-1476 fixes the newline issue by counting the last row even if it does not have a newline at the end of file. but it doesn't fill the row with data. If there are partition key columns to materialize, this screws up offsets in the tuple and leads later on to a crash.

      This can be easily reproduce by creating a partitioned table, load data from a data file without newline at the end, then select <partitionkey column> from table

      Attachments

        Activity

          People

            jyu@cloudera.com Juan Yu
            jyu@cloudera.com Juan Yu
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: