testdata/datasets/functional/functional_schema_template.sql
@@ -1464,6 +1464,25 @@ hadoop fs -put -f ${IMPALA_HOME}/testdata/data/table_no_newline.csv /test-wareho
 ---- DATASET
 functional
 ---- BASE_TABLE_NAME
+table_no_newline_part
+---- CREATE
+CREATE EXTERNAL TABLE IF NOT EXISTS {db_name}{db_suffix}.{table_name} (
+id INT, col_1 BOOLEAN, col_2 DOUBLE, col_3 TIMESTAMP)
+partitioned by (year INT, month INT)
+row format delimited fields terminated by ','
+LOCATION '/test-warehouse/{table_name}';
+ALTER TABLE {db_name}{db_suffix}.{table_name} ADD PARTITION (year=2015, month=3);
+ALTER TABLE {db_name}{db_suffix}.{table_name} ADD PARTITION (year=2010, month=3);
+---- LOAD
+`hadoop fs -mkdir -p /test-warehouse/table_no_newline_part && \
+hadoop fs -mkdir -p /test-warehouse/table_no_newline_part/year=2010/month=3 && \
+hadoop fs -mkdir -p /test-warehouse/table_no_newline_part/year=2015/month=3 && \
+hadoop fs -put -f ${IMPALA_HOME}/testdata/data/table_no_newline.csv /test-warehouse/table_no_newline_part/year=2010/month=3 && \
+hadoop fs -put -f ${IMPALA_HOME}/testdata/data/table_missing_columns.csv /test-warehouse/table_no_newline_part/year=2015/month=3
+====
+---- DATASET
+functional
+---- BASE_TABLE_NAME
 testescape_16_lf
 ---- CREATE
 CREATE EXTERNAL TABLE IF NOT EXISTS {db_name}{db_suffix}.{table_name} (
